# cdd-django-ptpython

./: .gitignore  README.md  pyproject.toml
src/cordada/django_ptpython/: apps.py
src/cordada/django_ptpython/management/commands/: shell.py
